created aplha version? but in listfragment strill has issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="enemy_message">Противник установил для вас:</string>
     <string name="next_step">Следующй ход</string>
     <string name="todo">TODO</string>
+    <string name="choose_figure_to_enemy">Выберите фигуру противника</string>
 </resources>
