--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">MobileApp4</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="player_message">Вы установи противнику:</string>
-    <string name="enemy_message">Противник установил для вас:</string>
+    <string name="player_message">Фигура противника</string>
+    <string name="enemy_message">Ваша фигура</string>
     <string name="next_step">Следующй ход</string>
     <string name="todo">TODO</string>
     <string name="choose_figure_to_enemy">Выберите фигуру противника</string>
